Overflow solved

--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,7 @@ body {
   background-attachment: fixed;
   color: #fff;
   position: relative;
+  overflow-x: hidden;
 }
 
 
